# rayflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  recipe.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
notebooks/: prototype.ipynb
profiles/: local.yaml
rayflow/: config.py  constants.py
steps/: ingest.py  split.py  train.py  transform.py
