[tool.poetry]
name = "Rayflow"
version = "0.0.1"
description = "A whirlwind tour of Ray and MLflow recipes"
authors = ["Stefan Langenbach <stefan@langenbach.online>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "rayflow"}
]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.13.1"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.23.0"}
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"
pytest = "^7.4.0"
ipykernel = "^6.25.0"
nbconvert = "^7.7.3"
pre-commit = "^3.7.0"
kaggle = "^1.6.14"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "S"]
ignore = ["D212"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["D104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
